//我们定义一个人的数据结构,
//protobuf 有2个版本，默认版本是 proto2，如果需要 proto3，则需要在非空非注释第一行使用 syntax = "proto3" 标明版本。
syntax = "proto3";
package goods;
option  go_package = "/Users/zhangguofu/website/goproject/proto/gen/go/goods/;goods";

service GoodsInfo{
  //一个添加商品
  rpc addGoods(Goods) returns(GoodsId);
  //一个获取商品
  rpc getGoods(GoodsId) returns(Goods);

}
//定义商品的消息类型
message Goods{
  string id = 1;
  string name = 2;
  string desc = 3;
}

//定义商品id的消息类型
message GoodsId{
  string value=1;
}